<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragments.CalculatorFragment"
    android:padding="10dp">


    <TextView
        android:textSize="32sp"
        android:id="@+id/textView_show_number"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:focusableInTouchMode="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:clickable="false"/>

        <Button
            android:id="@+id/button_delete"
            android:gravity="center"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:weightSum="4"
        >

        <Button
            android:id="@+id/button_seven"
            android:text="@string/seven"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_eight"
            android:text="@string/eight"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_nine"
            android:text="@string/nine"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_divide"
            android:text="@string/divide"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <Button
            android:id="@+id/button_four"
            android:text="@string/four"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_five"
            android:text="@string/five"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_six"
            android:text="@string/six"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_multiply"
            android:text="@string/multiply"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <Button
            android:id="@+id/button_one"
            android:text="@string/one"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_two"
            android:text="@string/two"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_three"
            android:text="@string/three"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_negative"
            android:text="@string/negative"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <Button
            android:id="@+id/button_point"
            android:text="@string/point"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_zero"
            android:text="@string/zero"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_equal"
            android:text="@string/equal"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_sum"
            android:text="@string/sum"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>